Fix project heading size and tooltip overlap

--- a/src/styles/views/_project.scss
+++ b/src/styles/views/_project.scss
@@ -4,14 +4,12 @@
   display: flex;
   flex-direction: column;
   align-items: center;
-  margin-bottom: 2rem;
   padding: 4rem 0;
   position: relative;
 
   .project-info {
     .project-website {
       color: inherit;
-      margin-top: 0.2rem;
       padding: 0.2rem 1rem 0.3rem;
       border-radius: 2rem;
       &:hover, &:focus {
@@ -106,6 +104,18 @@ html:not(.is-animating) .project-arrow {
   // &:focus {
   //   box-shadow: 0 0.3rem 0.5rem -0.2rem rgba($neutral-10, 0.2), 0 0 0 4px rgba($color-blue, 0.5);
   // }
+}
+
+@include media-max(645px) {
+  .project-title {
+    font-size: 15vw;
+  }
+}
+
+@include media-max(760px) {
+  .project-arrow .tooltip {
+    display: none;
+  }
 }
 
 .project-role {
